<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vo_visualizer</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="chansoo0710@gmail.com">park-ubuntu</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

    <!-- ROS 2 런타임 및 메시지 타입 -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <!-- Python 라이브러리 -->
  <depend>numpy</depend>
  <depend>torch</depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
